ajout formulaire et test php

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
             </div>
         </div>
+        <a href="contact.html" target="contact.html">
+          <input type="button" value="me contacter">
+        </a>
         </div>
 
       </body>
